[5.0.x] Fixed #34995 -- Improved position of related widget's add link on admin pages on small screens.
Regression in 1699f8b52ac15f687cc39088401c2641022c71cd.


Backport of 999ba9db6d6331eaa58af77debba42754bcc1a8e from main

--- a/django/contrib/admin/static/admin/css/rtl.css
+++ b/django/contrib/admin/static/admin/css/rtl.css
@@ -296,3 +296,7 @@ form .form-row p.datetime {
     margin-left: inherit;
     margin-right: 2px;
 }
+
+.selector .selector-chooser {
+    margin: 0;
+}
